<resources>
    <string name="app_name">AutoRepair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_fields">Empty Fields Are not Allowed !!</string>
    <string name="password_is_not_matching">Password is not matching</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet">Not Registered Yet , Sign Up !</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="already_registered">Already Registered , Sign In !</string>
    <string name="add_your_car">Add your car</string>
    <string name="add_car">add car</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="engine">Engine</string>
    <string name="cars">Cars</string>
    <string name="what_repair_do_you_need">What repair do you need?</string>
    <string name="send_to_shop">Send to shop</string>
    <string name="add_photo_of_damage">Add photo of damage</string>
    <string name="permissions_granted">CAMERA and MEDIA permissions granted</string>
    <string name="you_need_to_accept_permissions">You need to accept CAMERA and MEDIA permissions to add a photo</string>
    <string name="photos">Photos</string>
    <string name="clicked_item">Clicked item : </string>
    <string name="attach">attach</string>
    <string name="photos_added">Photos added</string>
    <string name="photos_uploaded_successfully">Photos uploaded successfully</string>
    <string name="enter_contact_information">Please enter your contact information to continue</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="request_submitted">The repair request has been submitted successfully. Wait for a response from the service center. It will take no more than 6 hours. If you have additional questions, you can use the chat.</string>
    <string name="ok">OK</string>
</resources>