<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <ImageView
        android:id="@+id/image_car_logo"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:src="@drawable/ic_car_gray_extrasmall"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_make_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="Honda  Civic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_car_logo"/>

    <TextView
        android:id="@+id/text_engine_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="L4-2.0L Turbo  2023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_make_model"/>

    <FrameLayout
        android:id="@+id/frame_description"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded"
        app:layout_constraintTop_toBottomOf="@+id/text_engine_year"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/what_repair_do_you_need"
            android:inputType="text" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo_of_damage"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        app:icon="@drawable/photo"
        android:textAllCaps="false"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_description"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_to_shop"
        android:textAllCaps="false"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_photo_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>